# Highscore-Server

./: .replit  LICENSE  README.md  ServerDev.py  ServerProd.py  main.py  pyproject.toml  replit.nix  seeclients.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: dashboard.html  help.html  index.html
