[tool.poetry]
name = "highscore-server"
version = "0.1.0"
description = "A lightweight server to store and customize highscore table completly through url."
authors = ["Souptik Datta <souptikdatta2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
jsonify = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
